--- a/alurapic/src/app/home/signup/signup.component.html
+++ b/alurapic/src/app/home/signup/signup.component.html
@@ -66,6 +66,10 @@
             *ngIf="signupForm.get('password').errors?.maxlength && (form.submitted || signupForm.get('password').touched)"
             text="Maximum length is 14">
         </ap-vmessage>
+        <ap-vmessage 
+            *ngIf="signupForm.errors?.userNamePassword"
+            text="Username and password must be different">
+        </ap-vmessage>
     </div>
 
     <button  class="btn btn-primary btn-block">Register</button>
